--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,24 +4,66 @@
 }
 
 @plugin "daisyui/theme" {
-  name: "light";
-  default: true;
-  --color-primary: #06213a;
-  --color-primary-content: #fff;
-  --color-secondary: #cea96a;
+	name: "light";
+	default: true;
+	--color-primary: #06213a;
+	--color-primary-content: #fff;
+	--color-secondary: #cea96a;
 }
 
-html,body {
-  scroll-behavior: smooth;
-  overflow-x: hidden;
+html,
+body {
+	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 .btn {
-  @apply font-normal;
+	@apply font-normal;
 }
 
 .text-stroke-1 {
-    -webkit-text-stroke: 1px #06213a;
+	-webkit-text-stroke: 1px #06213a;
 }
 
+.image-box {
+	/* Here's the trick */
+	box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.6);
 
+	/* Basic background styles */
+	background-size: cover;
+
+	/* Here's the same styles we applied to our content-div earlier */
+	color: white;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	/* Add a transition, just for fun */
+	transition: box-shadow 0.3s ease-out;
+}
+/* .image-box:hover {
+	box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.2);
+} */
+
+
+.marquee-container {
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  position: relative;
+  padding: 10px 0;
+}
+
+.marquee-content {
+  display: inline-block;
+  animation: marquee 80s linear infinite;
+}
+
+@keyframes marquee {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(-80%);
+  }
+}
