--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
 html,
 body {
 	scroll-behavior: smooth;
-	overflow-x: hidden;
+	/* overflow-x: hidden; */
 }
 
 .btn {
@@ -66,4 +66,15 @@ body {
   to {
     transform: translateX(-80%);
   }
+}
+
+/* Example for text highlighting and animation on hover */
+.text-highlight {
+    color: #cea96a;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
+
+.text-highlight:hover {
+    color: #f0b144; /* Slightly brighter shade on hover */
 }
